# madamiru

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  tasks.py
.github/ISSUE_TEMPLATE/: bug.yaml
.github/workflows/: main.yaml
assets/: icon.kra
assets/linux/: com.mtkennerly.madamiru.desktop  com.mtkennerly.madamiru.metainfo.xml
docs/: cli.md
docs/help/: comparison-with-other-projects.md  installation.md  keyboard-controls.md  logging.md  troubleshooting.md
docs/schema/: config.yaml
lang/: de-DE.ftl  en-US.ftl  fr-FR.ftl  pl-PL.ftl  pt-BR.ftl
src/: cli.rs  gui.rs  lang.rs  main.rs  media.rs  path.rs  prelude.rs  resource.rs  scan.rs
src/cli/: parse.rs
src/gui/: app.rs  button.rs  common.rs  dropdown.rs  grid.rs  icon.rs  modal.rs  player.rs  shortcuts.rs  style.rs  widget.rs
src/resource/: config.rs  playlist.rs
