[package]
name = "madamiru"
version = "0.1.0"
authors = ["mtkennerly <mtkennerly@gmail.com>"]
edition = "2021"
description = "Dynamic multi-multimedia player"
repository = "https://github.com/mtkennerly/madamiru"
readme = "README.md"
license = "MIT"

[features]
default = ["audio", "video"]
audio = ["dep:rodio"]
video = ["dep:gstreamer", "dep:gstreamer-app", "dep:iced_video_player"]

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.17", features = ["derive", "wrap_help"] }
clap_complete = "4.5.28"
dirs = "5.0.1"
flexi_logger = { version = "0.29.3", features = ["async"] }
fluent = "0.16.1"
globetter = "0.2.0"
globset = "0.4.15"
gstreamer = { version = "0.23", optional = true }
gstreamer-app = { version = "0.23", optional = true }
iced = { version = "0.13.1", features = ["advanced", "image", "lazy", "svg", "tiny-skia", "tokio", "wgpu"], default-features = false }
iced_gif = "0.13.0"
iced_video_player = { version = ">=0.5.0", git = "https://github.com/jazzfool/iced_video_player.git", rev = "24428186a3f931db4813e1078c3c66faa84e9c9a", optional = true }
image = { version = "0.25.2", features = ["ico"], default-features = false }
infer = "0.16.0"
intl-memoizer = "0.5.2"
itertools = "0.13.0"
log = "0.4.22"
mime_guess = "2.0.5"
opener = "0.7.2"
rand = "0.8.5"
realia = "0.2.0"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["blocking", "gzip", "rustls-tls"], default-features = false }
rfd = { version = "0.15.0", features = ["gtk3"], default-features = false }
rodio = { version = "0.20.1", features = ["symphonia-aac", "symphonia-aiff", "symphonia-alac", "symphonia-flac", "symphonia-isomp4", "symphonia-mp3", "symphonia-vorbis", "symphonia-wav"], default-features = false, optional = true }
schemars = { version = "0.8.21", features = ["chrono"] }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.8.25"
tokio = { version = "1.40.0", features = ["macros", "time"] }
tree_magic_mini = "3.1.6"
typed-path = "0.9.2"
unic-langid = "0.9.5"
url = "2.5.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = ["Win32_System_Console", "Win32_System_Threading"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[target.'cfg(target_os = "macos")'.build-dependencies]
system-deps = "7"

[dev-dependencies]
pretty_assertions = "1.4.1"
test-case = "3.3.1"
velcro = "0.5.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
strip = true

[package.metadata.binstall]
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-win64{ archive-suffix }"

[package.metadata.binstall.overrides.i686-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-win32{ archive-suffix }"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-linux{ archive-suffix }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-mac{ archive-suffix }"
pkg-fmt = "tgz"

[package.metadata.system-deps]
"gstreamer-1.0" = "1.14"
